Code Sets- CX Admin New files added - [CXCodeSets,CXCodeList] Files modified - [pages-config.json,CXAdmin.html,app.variables.json,db-connection-settings.json]

--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -161,7 +161,21 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn29" horizontalalign="center" padding="2em unset"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn29" horizontalalign="center" padding="2em unset">
+                        <wm-tile width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_CXCodeSets.invoke()" name="tile11">
+                            <wm-layoutgrid height="100%" name="layoutgrid12">
+                                <wm-gridrow height="100%" name="gridrow15">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn33">
+                                        <wm-icon iconsize="3em" iconclass="wi wi-hammer" name="icon11"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn34">
+                                        <wm-label caption="CX CodeSets" class="p" fontsize="1.4" fontunit="em" name="label20"></wm-label>
+                                        <wm-label caption="00" fontsize="3" fontunit="em" class="p" name="label21"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn30"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
