CountOfMunicipalityCode New files added - [CountOfMunicipalityCodeListResponse.java] Files modified - [Cx2QueryExecutorServiceImpl.java,CodeEnforcementDashboard.variables.json,cx2-queries.hbm.xml,QueryExecutionController.java,CodeEnforcementDashboard.html,cx2_query.json,Cx2QueryExecutorService.java,pom.xml]

--- a/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
+++ b/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
@@ -90,7 +90,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn18_1">
                                         <wm-label caption="Code Sets" class="p" fontsize="1.5" fontunit="em" name="label11"></wm-label>
-                                        <wm-label caption="00" fontsize="3" fontunit="em" class="p" name="label12"></wm-label>
+                                        <wm-label caption="bind:Variables.svCountOfMunicipalityCodeList.firstRecord.countCodeList" fontsize="3" fontunit="em" class="p" name="label12"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
