--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -559,6 +559,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
+                            <wm-tabpane name="tabpane8" title="Code Enforcement" show="bind:Widgets.liveformUpdateFormType.formWidgets.codeEnforcement.datavalue"></wm-tabpane>
                             <wm-tabpane name="tabpaneInspections" title="Inspections" show="bind:Widgets.liveformUpdateFormType.formWidgets.inspections.datavalue">
                                 <wm-layoutgrid name="layoutgrid1">
                                     <wm-gridrow name="gridrow2" padding="unset unset 1em unset">
@@ -689,36 +690,6 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneCXADMIN" title="CX Admin" accessroles="CXAdmin">
-                                <wm-layoutgrid name="layoutgrid8">
-                                    <wm-gridrow name="gridrow28_1">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn62_1" padding="1em unset">
-                                            <wm-composite name="composite3">
-                                                <wm-label class="col-md-3 form-control-static" name="label5" caption="Report" fontweight="bold"></wm-label>
-                                                <wm-container class="col-md-9" name="container3">
-                                                    <wm-text name="textReport" datavalue="bind:Variables.CurrentFormObj.dataSet.data[$i].report"></wm-text>
-                                                </wm-container>
-                                            </wm-composite>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                    <wm-gridrow name="gridrow36_2">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn61_3">
-                                            <wm-composite name="composite4">
-                                                <wm-label class="col-md-3 form-control-static" name="label5_1" caption="Form Table Name" fontweight="bold"></wm-label>
-                                                <wm-container class="col-md-9" name="container4">
-                                                    <wm-text name="textFormTableName" datavalue="bind:Variables.CurrentFormObj.dataSet.data[$i].formTableName" readonly="true"></wm-text>
-                                                </wm-container>
-                                            </wm-composite>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                    <wm-gridrow name="gridrow29">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn64" padding="1em unset" horizontalalign="right">
-                                            <wm-button class="btn-default btn-primary" caption="Update" type="button" margin="unset 0.5em" name="buttonUpdateDevDetails" iconclass="wi wi-update" on-click="Variables.UpdateDevFormDetailsForCXAdmin.invoke()"
-                                            horizontalalign="right"></wm-button>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                </wm-layoutgrid>
-                            </wm-tabpane>
                             <wm-tabpane name="tabpaneLetters" title="Letters">
                                 <wm-livegrid formlayout="dialog" name="livegridLetters">
                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvLetterTemplatesData.dataSet" navigation="Classic" name="gridLetters">
@@ -768,6 +739,36 @@
                                         <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
                                     </wm-liveform>
                                 </wm-livegrid>
+                            </wm-tabpane>
+                            <wm-tabpane name="tabpaneCXADMIN" title="CX Admin" accessroles="CXAdmin">
+                                <wm-layoutgrid name="layoutgrid8">
+                                    <wm-gridrow name="gridrow28_1">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn62_1" padding="1em unset">
+                                            <wm-composite name="composite3">
+                                                <wm-label class="col-md-3 form-control-static" name="label5" caption="Report" fontweight="bold"></wm-label>
+                                                <wm-container class="col-md-9" name="container3">
+                                                    <wm-text name="textReport" datavalue="bind:Variables.CurrentFormObj.dataSet.data[$i].report"></wm-text>
+                                                </wm-container>
+                                            </wm-composite>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow36_2">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn61_3">
+                                            <wm-composite name="composite4">
+                                                <wm-label class="col-md-3 form-control-static" name="label5_1" caption="Form Table Name" fontweight="bold"></wm-label>
+                                                <wm-container class="col-md-9" name="container4">
+                                                    <wm-text name="textFormTableName" datavalue="bind:Variables.CurrentFormObj.dataSet.data[$i].formTableName" readonly="true"></wm-text>
+                                                </wm-container>
+                                            </wm-composite>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow29">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn64" padding="1em unset" horizontalalign="right">
+                                            <wm-button class="btn-default btn-primary" caption="Update" type="button" margin="unset 0.5em" name="buttonUpdateDevDetails" iconclass="wi wi-update" on-click="Variables.UpdateDevFormDetailsForCXAdmin.invoke()"
+                                            horizontalalign="right"></wm-button>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                </wm-layoutgrid>
                             </wm-tabpane>
                         </wm-tabs>
                     </wm-gridcolumn>
