--- a/src/main/webapp/pages/ViewInspection/ViewInspection.html
+++ b/src/main/webapp/pages/ViewInspection/ViewInspection.html
@@ -24,28 +24,28 @@
                                 <wm-gridrow name="gridrow7">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn10"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn11" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="label7" class="h1" caption="Inspection Type"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label7" class="h1" caption="[InspectionDesign]"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn15"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow84_1">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn155_2"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn156_1" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="label65_1" caption="Inspection Title" fontsize="18"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label65_1" caption="[InspectionTitle]" fontsize="18"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn157"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow83_1">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn156_3"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn156_2" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="label66" caption="Created By:" fontsize="15"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label66" caption="Requested By: [CreatedByUser]" fontsize="15"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn157_1"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow14">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn24_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn28" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="labelInspectionStatus" caption="Inspection Status" class="h3"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="labelInspectionStatus" caption="Outcome: [InspectionOutcome]" class="h3"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn25"></wm-gridcolumn>
                                 </wm-gridrow>
@@ -62,13 +62,13 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow3">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn5_1">
-                        <wm-panel iconclass="wi wi-mode-edit" autoclose="outsideClick" name="panelInspectionReview" title="Inspection  Review" class="panel-primary" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee" show="true">
+                        <wm-panel iconclass="wi wi-mode-edit" autoclose="outsideClick" name="panelInspectionReview" title="Inspection Outcome" class="panel-primary" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee" show="true">
                             <wm-layoutgrid name="layoutgrid3">
                                 <wm-gridrow name="gridrow9" padding=".5em unset">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn17">
                                         <wm-composite name="composite1" required="true">
-                                            <wm-label class="col-md-3 control-label" name="label4" caption="Status"></wm-label>
+                                            <wm-label class="col-md-3 control-label" name="label4" caption="Outcome"></wm-label>
                                             <wm-container class="col-md-9" name="container2_1">
                                                 <wm-select name="selectStatus" required="true"></wm-select>
                                             </wm-container>
