made "Code Sets" tile visible only to CodeManager/MuniAdmin/CXAdmin Files modified - [CodeEnforcementDashboard.html]

--- a/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
+++ b/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
@@ -82,7 +82,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn12" padding="2em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile5" on-click="Variables.goToPage_MunicipalityCodeSets.invoke()">
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile5" on-click="Variables.goToPage_MunicipalityCodeSets.invoke()" accessroles="CodeManager,CXAdmin,MunicipalityAdmin">
                             <wm-layoutgrid height="100%" name="layoutgrid6">
                                 <wm-gridrow height="100%" name="gridrow8_2">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn17_2">
